--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              片岡 蕪川的博客
+title:              片岡 蕪川的部落格
 email:              yuki586@outlook.com
 description:        Different strokes for different folks.
 author:             蕪川
